Changed the TITLE of page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
 	<meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Aaron Kreigh</title>
+  <title>Aaron Kreigh Design</title>
 
   
   <link rel="stylesheet" href="stylesheets/app.css">
