--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
 	<div class="row" id="footer">
 		<div class="small-10 small-centered columns">
-			<p>©2015 Aaron Kreigh Hooper. All Rights Reserved. Try not to panic.</p>
+			<p>©2015 Aaron Kreigh Hooper. All Rights Reserved. Don't panic.</p>
 		</div>
 	</div>
 
